// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunicatorBoardItem tests default renderer 1`] = `
<div
  className="CommunicatorDialog__boards__item"
>
  <div
    className="CommunicatorDialog__boards__item__image"
  >
    <div
      className="CommunicatorDialog__boards__item__image__empty"
    >
      <pure(BrokenImage) />
    </div>
    <div
      className="CommunicatorDialog__boards__item__image__button"
    >
      <IconButton
        label="cboard.components.CommunicatorDialog.addBoard"
        onClick={[Function]}
      >
        <pure(AddCircle) />
      </IconButton>
    </div>
  </div>
  <div
    className="CommunicatorDialog__boards__item__data"
  >
    <div
      className="CommunicatorDialog__boards__item__data__button"
    >
      <IconButton
        className="board-item-menu-button board-item-menu-button-someid"
        label="cboard.components.CommunicatorDialog.menu"
        onClick={[Function]}
      >
        <pure(MoreVert) />
      </IconButton>
      <WithStyles(Menu)
        anchorEl={null}
        className="board-item-menu board-item-menu-someid"
        onClose={[Function]}
        open={false}
      >
        <WithStyles(MenuItem)
          onClick={[Function]}
        >
          ...
        </WithStyles(MenuItem)>
      </WithStyles(Menu)>
    </div>
    <div
      className="CommunicatorDialog__boards__item__data__title"
    >
      some.namekey.for.board
    </div>
    <div
      className="CommunicatorDialog__boards__item__data__author"
    >
      cboard.components.CommunicatorDialog.author
    </div>
    <div
      className="CommunicatorDialog__boards__item__data__extra"
    >
      
    </div>
  </div>
</div>
`;

exports[`CommunicatorBoardItem tests menu behavior 1`] = `
<div
  className="CommunicatorDialog__boards__item"
>
  <div
    className="CommunicatorDialog__boards__item__image"
  >
    <div
      className="CommunicatorDialog__boards__item__image__empty"
    >
      <pure(BrokenImage) />
    </div>
    <div
      className="CommunicatorDialog__boards__item__image__button"
    >
      <IconButton
        label="cboard.components.CommunicatorDialog.addBoard"
        onClick={[Function]}
      >
        <pure(AddCircle) />
      </IconButton>
    </div>
  </div>
  <div
    className="CommunicatorDialog__boards__item__data"
  >
    <div
      className="CommunicatorDialog__boards__item__data__button"
    >
      <IconButton
        className="board-item-menu-button board-item-menu-button-someid"
        label="cboard.components.CommunicatorDialog.menu"
        onClick={[Function]}
      >
        <pure(MoreVert) />
      </IconButton>
      <WithStyles(Menu)
        anchorEl={null}
        className="board-item-menu board-item-menu-someid"
        onClose={[Function]}
        open={false}
      >
        <WithStyles(MenuItem)
          onClick={[Function]}
        >
          ...
        </WithStyles(MenuItem)>
      </WithStyles(Menu)>
    </div>
    <div
      className="CommunicatorDialog__boards__item__data__title"
    >
      some.namekey.for.board
    </div>
    <div
      className="CommunicatorDialog__boards__item__data__author"
    >
      cboard.components.CommunicatorDialog.author
    </div>
    <div
      className="CommunicatorDialog__boards__item__data__extra"
    />
  </div>
</div>
`;

exports[`CommunicatorBoardItem tests menu behavior 2`] = `
<div
  className="CommunicatorDialog__boards__item"
>
  <div
    className="CommunicatorDialog__boards__item__image"
  >
    <div
      className="CommunicatorDialog__boards__item__image__empty"
    >
      <pure(BrokenImage) />
    </div>
    <div
      className="CommunicatorDialog__boards__item__image__button"
    >
      <IconButton
        label="cboard.components.CommunicatorDialog.addBoard"
        onClick={[Function]}
      >
        <pure(AddCircle) />
      </IconButton>
    </div>
  </div>
  <div
    className="CommunicatorDialog__boards__item__data"
  >
    <div
      className="CommunicatorDialog__boards__item__data__button"
    >
      <IconButton
        className="board-item-menu-button board-item-menu-button-someid"
        label="cboard.components.CommunicatorDialog.menu"
        onClick={[Function]}
      >
        <pure(MoreVert) />
      </IconButton>
      <WithStyles(Menu)
        anchorEl="someElement"
        className="board-item-menu board-item-menu-someid"
        onClose={[Function]}
        open={true}
      >
        <WithStyles(MenuItem)
          onClick={[Function]}
        >
          ...
        </WithStyles(MenuItem)>
      </WithStyles(Menu)>
    </div>
    <div
      className="CommunicatorDialog__boards__item__data__title"
    >
      some.namekey.for.board
    </div>
    <div
      className="CommunicatorDialog__boards__item__data__author"
    >
      cboard.components.CommunicatorDialog.author
    </div>
    <div
      className="CommunicatorDialog__boards__item__data__extra"
    />
  </div>
</div>
`;
